d100 advantage/disadvantage swapped

--- a/mothership_dice.ipynb
+++ b/mothership_dice.ipynb
@@ -57,8 +57,8 @@
     "df['ignore'] = 0\n",
     "\n",
     "df['1d100'] = df.apply(roll_dice, num_die=1, sides=100, axis='columns')\n",
-    "df['1d100[+]'] = df.apply(roll_dice_advantage, num_die=1, sides=100, axis='columns')\n",
-    "df['1d100[-]'] = df.apply(roll_dice_disadvantage, num_die=1, sides=100, axis='columns')\n",
+    "df['1d100[+]'] = df.apply(roll_dice_disadvantage, num_die=1, sides=100, axis='columns')\n",
+    "df['1d100[-]'] = df.apply(roll_dice_advantage, num_die=1, sides=100, axis='columns')\n",
     "\n",
     "df.drop('ignore', axis=1, inplace=True)"
    ]
